syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/zcubbs/tlz";

message Namespace {
  string id = 1;
  string name = 2;
  string user_id = 3;
  google.protobuf.Timestamp created_at = 6;
}
